# SMB_Catalyst_Assignment

./: README.md  pyproject.toml
src/autolayout/: __init__.py  cli.py  models.py  streamlit_app.py
src/autolayout/api/: app.py
src/autolayout/core/: __init__.py  brief_parser.py  drafting_engine.py  layout_engine.py  revision_engine.py
tests/: test_pipeline.py
